# rust-lightbike

./: Cargo.toml  README.ipynb  README.md
assets/models/: bike.glb
src/: main.rs
