[package]
name = "rust-lightbike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
bevy_egui = "0.15"
bevy-inspector-egui = "0.12"
bevy-inspector-egui-rapier = { version = "0.5", features = ["rapier3d"] }